include/bbs.h

typedef enum ProofMessageType {
  Revealed = 1,
  HiddenProofSpecificBlinding = 2,
  HiddenExternalBlinding = 3,
} ProofMessageType;
typedef struct ByteBuffer {
  int64_t len;
  uint8_t *data;
} ByteBuffer;
typedef int32_t ErrorCode;
typedef struct ExternError {
  ErrorCode code;
  char *message;
} ExternError;
typedef const char *FfiStr;
typedef struct ByteArray {
  uintptr_t length;
  const uint8_t *data;
} ByteArray;
void bbs_string_free(char *s);
void bbs_byte_buffer_free(struct ByteBuffer v);
int32_t bbs_blind_signature_size(void);
uint64_t bbs_blind_commitment_context_init(struct ExternError *err);
int32_t bbs_blind_commitment_context_add_message_string(uint64_t handle,
                                                        uint32_t index,
                                                        FfiStr message,
                                                        struct ExternError *err);
int32_t bbs_blind_commitment_context_add_message_bytes(uint64_t handle,
                                                       uint32_t index,
                                                       struct ByteArray message,
                                                       struct ExternError *err);
int32_t bbs_blind_commitment_context_add_message_prehashed(uint64_t handle,
                                                           uint32_t index,
                                                           struct ByteArray message,
                                                           struct ExternError *err);
int32_t bbs_blind_commitment_context_set_public_key(uint64_t handle,
                                                    struct ByteArray value,
                                                    struct ExternError *err);
int32_t bbs_blind_commitment_context_set_nonce_string(uint64_t handle,
                                                      FfiStr message,
                                                      struct ExternError *err);
int32_t bbs_blind_commitment_context_set_nonce_bytes(uint64_t handle,
                                                     struct ByteArray value,
                                                     struct ExternError *err);
int32_t bbs_blind_commitment_context_set_nonce_prehashed(uint64_t handle,
                                                         struct ByteArray value,
                                                         struct ExternError *err);
int32_t bbs_blind_commitment_context_finish(uint64_t handle,
                                            struct ByteBuffer *commitment,
                                            struct ByteBuffer *out_context,
                                            struct ByteBuffer *blinding_factor,
                                            struct ExternError *err);
uint64_t bbs_blind_sign_context_init(struct ExternError *err);
int32_t bbs_blind_sign_context_add_message_string(uint64_t handle,
                                                  uint32_t index,
                                                  FfiStr message,
                                                  struct ExternError *err);
int32_t bbs_blind_sign_context_add_message_bytes(uint64_t handle,
                                                 uint32_t index,
                                                 struct ByteArray message,
                                                 struct ExternError *err);
int32_t bbs_blind_sign_context_add_message_prehashed(uint64_t handle,
                                                     uint32_t index,
                                                     struct ByteArray message,
                                                     struct ExternError *err);
int32_t bbs_blind_sign_context_set_public_key(uint64_t handle,
                                              struct ByteArray value,
                                              struct ExternError *err);
int32_t bbs_blind_sign_context_set_secret_key(uint64_t handle,
                                              struct ByteArray value,
                                              struct ExternError *err);
int32_t bbs_blind_sign_context_set_commitment(uint64_t handle,
                                              struct ByteArray value,
                                              struct ExternError *err);
int32_t bbs_blind_sign_context_finish(uint64_t handle,
                                      struct ByteBuffer *blinded_signature,
                                      struct ExternError *err);
int32_t bbs_unblind_signature(struct ByteArray blind_signature,
                              struct ByteArray blinding_factor,
                              struct ByteBuffer *unblind_signature,
                              struct ExternError *err);
uint64_t bbs_create_proof_context_init(struct ExternError *err);
int32_t bbs_create_proof_context_add_proof_message_string(uint64_t handle,
                                                          FfiStr message,
                                                          enum ProofMessageType xtype,
                                                          struct ByteArray blinding_factor,
                                                          struct ExternError *err);
int32_t bbs_create_proof_context_add_proof_message_bytes(uint64_t handle,
                                                         struct ByteArray message,
                                                         enum ProofMessageType xtype,
                                                         struct ByteArray blinding_factor,
                                                         struct ExternError *err);
int32_t bbs_create_proof_context_add_proof_message_prehashed(uint64_t handle,
                                                             struct ByteArray message,
                                                             enum ProofMessageType xtype,
                                                             struct ByteArray blinding_factor,
                                                             struct ExternError *err);
int32_t bbs_create_proof_context_set_signature(uint64_t handle,
                                               struct ByteArray value,
                                               struct ExternError *err);
int32_t bbs_create_proof_context_set_public_key(uint64_t handle,
                                                struct ByteArray value,
                                                struct ExternError *err);
int32_t bbs_create_proof_context_set_nonce_string(uint64_t handle,
                                                  FfiStr message,
                                                  struct ExternError *err);
int32_t bbs_create_proof_context_set_nonce_bytes(uint64_t handle,
                                                 struct ByteArray value,
                                                 struct ExternError *err);
int32_t bbs_create_proof_context_set_nonce_prehashed(uint64_t handle,
                                                     struct ByteArray value,
                                                     struct ExternError *err);
int32_t bbs_create_proof_context_finish(uint64_t handle,
                                        struct ByteBuffer *proof,
                                        struct ExternError *err);
int32_t bbs_signature_size(void);
uint64_t bbs_sign_context_init(struct ExternError *err);
int32_t bbs_sign_context_finish(uint64_t handle,
                                struct ByteBuffer *signature,
                                struct ExternError *err);
int32_t bls_secret_key_size(void);
int32_t bls_public_key_g2_size(void);
int32_t blinding_factor_size(void);
int32_t bls_public_key_g1_size(void);
int32_t bls_generate_g2_key(struct ByteArray seed,
                            struct ByteBuffer *public_key,
                            struct ByteBuffer *secret_key,
                            struct ExternError *err);
int32_t bls_generate_g1_key(struct ByteArray seed,
                            struct ByteBuffer *public_key,
                            struct ByteBuffer *secret_key,
                            struct ExternError *err);
int32_t bls_generate_blinded_g2_key(struct ByteArray seed,
                                    struct ByteBuffer *public_key,
                                    struct ByteBuffer *secret_key,
                                    struct ByteBuffer *blinding_factor,
                                    struct ExternError *err);
int32_t bls_generate_blinded_g1_key(struct ByteArray seed,
                                    struct ByteBuffer *public_key,
                                    struct ByteBuffer *secret_key,
                                    struct ByteBuffer *blinding_factor,
                                    struct ExternError *err);
int32_t bls_get_public_key(struct ByteArray secret_key,
                           struct ByteBuffer *public_key,
                           struct ExternError *err);
int32_t bls_secret_key_to_bbs_key(struct ByteArray secret_key,
                                  uint32_t message_count,
                                  struct ByteBuffer *public_key,
                                  struct ExternError *err);
int32_t bls_public_key_to_bbs_key(struct ByteArray d_public_key,
                                  uint32_t message_count,
                                  struct ByteBuffer *public_key,
                                  struct ExternError *err);